Fixed scrollbars

--- a/playground/sam/SensorsTab/sensorsTab.css
+++ b/playground/sam/SensorsTab/sensorsTab.css
@@ -29,17 +29,28 @@
 /*This stuff indicates sections*/
 #locations{
 	width: 100%;
-	max-height: 60%;
-	overflow: scroll;
 }
 #dataTable{
 	width: 100%;
-	height: auto;
 	overflow-x: scroll;
 }
 table{
 	width: 100%;
 }
-::-webkit-scrollbar { 
-    display: none; 
+
+
+::-webkit-scrollbar {
+	width: 5px;
 }
+
+::-webkit-scrollbar-track {
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+	border-radius: 20px;
+}
+
+::-webkit-scrollbar-thumb {
+	border-radius: 20px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
+
+
